# eowyn

./: .testr.conf  DESIGN.md  HACKING.md  README.md  TODO.md  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
eowyn/: api.py  exceptions.py
eowyn/etc/: api.conf.sample
eowyn/model/: README.md  manager.py  managers.py  redis_manager.py
eowyn/tests/: base.py  test_api.py  test_exceptions.py  test_redis_manager.py  test_simple_manager.py
