[metadata]
name = eowyn
summary = Publish Subcribe Server
description-file =
    README.md
author = Andrea Frittoli
author-email = andrea.frittoli@gmail.com
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    eowyn
data_files =
    etc/eowyn = etc/*

[entry_points]
console_scripts =
    eowyn-api = eowyn.api:main

[wheel]
universal = 1
